# Rheology-ai-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml
data/: dataset.csv
models/: scaler.pkl  surrogate_model.pt
src/agent/: graph.py  nodes.py  state.py
src/control/: stability.py
src/plant/: simulated_plant.py
src/surrogate/: inference.py  model.py  train.py
